# WhatsUI

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_TODO.md  LICENSE  NOTICE  README.md  ROADMAP.md  WHATSUI_ARCHITECTURE.md  build.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: WhatsUIConfig.cmake.in  WhatsUIReleaseCheck.cmake  WhatsUISanitizers.cmake
doc/: WINDOWS_TEXT_RENDERING_POSTMORTEM.md
doc/whatsui/: ADR-001-positioning-and-scope.md  ADR-002-single-tree-runtime-and-state.md  ADR-003-navigation-window-and-platform-host.md  ADR-004-theme-and-authoring.md  ADR-005-declarative-builder-api.md  COMMAND_PALETTE_REFERENCE.md  COMPATIBILITY_POLICY_1_0_DRAFT.md  CONTROLS.md  DIALOG.md  EVENT_ROUTING.md  FLUENT_ACCORDION.md  FLUENT_BUTTON.md  FLUENT_COMPONENT_COMPLETION_TODOS.md  FLUENT_DEFAULT_THEME.md  FLUENT_DRAWER.md  FLUENT_FIELD_MESSAGEBAR.md  FLUENT_ICONS.md  FLUENT_IMAGE_RATING.md  FLUENT_INDICATOR_GEOMETRY.md  FLUENT_INPUT_TEXTAREA.md  FLUENT_NAVIGATION.md  FLUENT_P0_FEEDBACK_IDENTITY_TODOS.md  FLUENT_P1_NAVIGATION_OVERLAYS_SELECTION_TODOS.md  FLUENT_P2_DISCLOSURE_SURFACES_IDENTITY_TODOS.md  FLUENT_P3_DATE_COLLECTIONS_TODOS.md  FLUENT_PERSONA.md  FLUENT_PIXEL_POLISH_AUDIT.md  FLUENT_POPOVER_TEACHING_POPOVER.md  FLUENT_SELECTION_CONTROLS.md  FLUENT_SELECTION_MEDIA_RATING.md  FLUENT_SELECTION_MEDIA_RATING_TODOS.md  FLUENT_TABLE_DATAGRID.md  FLUENT_TEXT_BASELINE_POSTMORTEM.md  FLUENT_TOAST_SPINNER.md  FLUENT_TODO_ACCEPTANCE.md  FLUENT_TREE.md  FLUENT_VISUAL_QUALITY_GATES.md  GEOMETRY_AND_RENDERING_CONTRACT.md  GLFW_INPUT.md  LAYOUT_MODEL.md  (+16 more)
examples/: CMakeLists.txt
examples/command_palette/: main.cpp
examples/debug_inspector/: main.cpp
examples/hello_window/: main.cpp
examples/render_to_image/: main.cpp
examples/settings_panel/: main.cpp
examples/todo_app/: main.cpp  todo_controller.cpp  todo_controller.h  todo_interaction.cpp  todo_interaction.h  todo_model.h  todo_storage.cpp  todo_storage.h
include/wui/: accessibility.h  accordion.h  animation.h  app.h  avatar.h  badge.h  basic_controls.h  date_time.h  drawer.h  events.h  feedback.h  form_feedback.h  frame_stats.h  glfw_platform.h  icons.h  list_view.h  navigation.h  node.h  overlays.h  paint_context.h  persona.h  platform.h  popover.h  rating.h  runtime.h  scheduler.h  selection.h  state.h  structural.h  table.h  text_input.h  text_metrics.h  theme.h  theme_access.h  theme_extensions.h  thread_check.h  tree.h  types.h  ui.h  ui_inspector.h  (+5 more)
src/whatsui/core/: accessibility.cpp  app.cpp  node.cpp  scheduler.cpp  text_metrics.cpp  theme.cpp  thread_check.cpp  ui_inspector.cpp
src/whatsui/input/: events.cpp
src/whatsui/platform/: glfw_platform.cpp  windows_uia_provider.cpp
src/whatsui/runtime/: runtime.cpp
src/whatsui/widgets/: accordion.cpp  avatar.cpp  badge.cpp  basic_controls.cpp  button.cpp  button_visuals.h  card.cpp  date_time.cpp  dialog.cpp  drawer.cpp  feedback.cpp  form_feedback.cpp  icons.cpp  image.cpp  label.cpp  layout.cpp  list_view.cpp  navigation.cpp  overlays.cpp  persona.cpp  popover.cpp  rating.cpp  scroll_view.cpp  selection.cpp  structural.cpp  table.cpp  text.cpp  text_input.cpp  tree.cpp  virtual_list.cpp  widgets.cpp
tests/: CMakeLists.txt  CaptureTodoVisualReview.cmake  RunTodoNativePerfSmoke.cmake  VerifySettingsReference.cmake  VerifyTodoVisualHashes.cmake  avatar_group_tests.cpp  avatar_group_visual_tests.cpp  fluent_accordion_tests.cpp  fluent_accordion_visual_tests.cpp  fluent_badge_tests.cpp  fluent_badge_visual_tests.cpp  fluent_button_opengl_visual_tests.cpp  fluent_button_visual_tests.cpp  fluent_card_tests.cpp  fluent_checkbox_completion_tests.cpp  fluent_component_visual_matrix_tests.cpp  fluent_control_opengl_visual_matrix_tests.cpp  fluent_date_time_tests.cpp  fluent_date_time_visual_tests.cpp  fluent_drawer_tests.cpp  fluent_drawer_visual_tests.cpp  fluent_feedback_tests.cpp  fluent_feedback_visual_tests.cpp  fluent_field_messagebar_tests.cpp  fluent_field_messagebar_visual_tests.cpp  fluent_icons_tests.cpp  fluent_icons_visual_tests.cpp  fluent_indicator_geometry_tests.cpp  fluent_input_textarea_visual_tests.cpp  fluent_menu_button_visual_tests.cpp  fluent_navigation_tests.cpp  fluent_navigation_visual_tests.cpp  fluent_persona_tests.cpp  fluent_persona_visual_tests.cpp  fluent_popover_tests.cpp  fluent_popover_visual_tests.cpp  fluent_radio_visual_tests.cpp  fluent_range_controls_tests.cpp  fluent_range_controls_visual_tests.cpp  fluent_rating_image_visual_tests.cpp  (+36 more)
tests/package_consumer/: CMakeLists.txt  main.cpp
